--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <artifactId>common</artifactId>
+    <artifactId>core</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
