--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>3.4.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.12</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
