--- a/book_service/src/main/resources/application.yaml
+++ b/book_service/src/main/resources/application.yaml
@@ -21,6 +21,10 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-field: isDelete #默认deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      id-type: auto
 
 logging:
   level:
