--- a/book_service/pom.xml
+++ b/book_service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>book_store</artifactId>
         <groupId>com.lby</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -54,15 +54,21 @@
         <dependency>
             <groupId>com.lby</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <!-- mysql驱动 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.30</version>
         </dependency>
+
+        <!--引入nacos config注册中心依赖-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
 
     </dependencies>
 </project>
