--- a/book_service/src/main/resources/application.yml
+++ b/book_service/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
+  application:
+    name: book-service
+
   datasource:
     # hikari连接池配置
     hikari:
@@ -14,6 +17,10 @@ spring:
     password: indexwan123
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  cloud:
+    nacos:
+      server-addr: localhost:80
+
 # mybatis-plus配置
 mybatis-plus:
   configuration:
@@ -24,7 +31,7 @@ mybatis-plus:
       logic-delete-field: isDelete #默认deleted
       logic-delete-value: 1
       logic-not-delete-value: 0
-      id-type: auto
+
 
 logging:
   level:
