--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,8 +5,9 @@
     <parent>
         <artifactId>book_store</artifactId>
         <groupId>com.lby</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
